fix: adjust button size when navbar is expanded on small screens

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -184,6 +184,10 @@
     align-items: normal;
 }
 
+.navbar-expanded .btn {
+    font-size: 1em;
+}
+
 .navbar-expanded .search-input {
     margin-bottom: 1rem;
 }
